--- a/trunk/CadastroDeMusicas/.classpath
+++ b/trunk/CadastroDeMusicas/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="connector-mxj/mysql-connector-mxj-5-0-7-beta.jar"/>
-	<classpathentry exported="true" kind="lib" path="connector-mxj/mysql-connector-mxj-5-0-7-beta-db-files.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/basicplayer3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-javaflow-20060411.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdt-compiler-3.1.1.jar"/>
@@ -25,6 +23,8 @@
 	<classpathentry kind="lib" path="lib/JasperReports/jasperreports-3.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/JasperReports/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/myid3.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-mxj-gpl-5-0-11/mysql-connector-mxj-gpl-5-0-11-db-files.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-mxj-gpl-5-0-11/mysql-connector-mxj-gpl-5-0-11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/looks-2.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
