--- a/CadastroDeMusicas/.settings/org.eclipse.jdt.core.prefs
+++ b/CadastroDeMusicas/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Fri Jul 13 00:16:36 BRT 2007
+#Sat Mar 05 00:47:08 GMT-03:00 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
