--- a/CadastroDeMusicas/.classpath
+++ b/CadastroDeMusicas/.classpath
@@ -25,7 +25,7 @@
 	<classpathentry kind="lib" path="mysql-connector-mxj-gpl-5-0-11/mysql-connector-mxj-gpl-5-0-11-db-files.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-mxj-gpl-5-0-11/mysql-connector-mxj-gpl-5-0-11.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.12-bin.jar"/>
-	<classpathentry kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/looks-2.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
